# aaa-bot

./: .gitignore  Cargo.toml  README.md  notes.json
src/: .#main.rs  bot.rs  file.rs  main.rs  note.rs  notes.rs  task.rs  todo_list.rs
