[package]
name = "aaa-bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
log = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.85"
serde = "1.0.144"
chrono = "0.4.22"
once_cell = "*"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "sqlite", "macros"]}